# DHS-workshop26

./: .env.example  .gitignore  CLAUDE.md  README.md  agenda.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: concepts.md  index.md  setup.md
docs/modules/: 01-first-agent.ipynb  02-tools.ipynb  03-context-engineering.ipynb  04-agent-harness.ipynb  05-orchestration.ipynb  06-evaluation.ipynb  07-operationalize.ipynb  08-capstone.ipynb
scripts/: _nbbuild.py  gen_m1.py  gen_m2.py  gen_m3.py  gen_m4.py  gen_m5.py  gen_m6.py  gen_m7.py  gen_m8.py
slides/: DHS-2026-Agentic-AI.pptx  build_deck.py
workshop_utils/: __init__.py  clients.py
